[tool.poetry]
name = "mirror-api-docs"
description = "Documentation building environment for mirror-api"
version = "1.0.0"
authors = ["Nick DeRobertis <derobertis.nick@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
mirror-api = {path = "../..", develop = true}
sphinx = "*"
sphinx-autobuild = "*"
sphinx-autodoc-typehints = "*"
sphinxcontrib-fulltoc = "*"
sphinx-paramlinks = "*"
sphinx-gallery = "*"
sphinx-copybutton = "*"
pypandoc = "*"
myst-parser = "*"
sphinx-material = "*"
matplotlib = "*"
jupyter = "*"